Updated introduction text. Updated the hovering effect on the index page.

--- a/explorables/eva-and-lehd.html
+++ b/explorables/eva-and-lehd.html
@@ -9,10 +9,9 @@
     <div id="container">
       <div id="header">
         <div id="header-titles">
-          <div class="create-lab-font">
-            <a href="../">
+          <div class="logo">
+            <a href="./">
               <div class="title-text">Explorables</div>
-              <div class="subtitle-text">CREATE Lab</div>
             </a>
           </div>
         </div>
@@ -32,9 +31,10 @@
         </div>
       </div>
       <div id="footer">
-        <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
-        <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
-        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
+        <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
+        <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
+        <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
+        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;&nbsp;|&nbsp;
         <a href="tel:+14122686723">412-268-6723</a>
       </div>
     </div>
