--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -90,10 +90,9 @@
     <div id="container">
       <div id="header" style="position:fixed; top:0px; z-index:2; height: 65px;">
         <div id="header-titles">
-          <div class="create-lab-font">
-            <a href="../">
+          <div class="logo">
+            <a href="./">
               <div class="title-text">Explorables</div>
-              <div class="subtitle-text">CREATE Lab</div>
             </a>
           </div>
         </div>
@@ -176,21 +175,11 @@
             The right two images above are retrieved from <a href="http://en.wikipedia.org/wiki/Tatan_Power_Plant">Wikipedia</a> and <a href="http://www.taipower.com.tw/e_content/index.aspx">Taiwan Power Company’s website</a>.
           </p>
           <div id="footer">
-            <a href="http://www.ri.cmu.edu/">
-            The Robotics Institute
-            </a>
-            &nbsp;|
-            <a href="http://www.cmu.edu">
-            Carnegie Mellon University
-            </a>
-            &nbsp;|
-            <a href="mailto:info@cmucreatelab.org">
-            info@cmucreatelab.org
-            </a>
-            &nbsp;|
-            <a href="tel:+14122686723">
-            412-268-6723
-            </a>
+            <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
+            <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
+            <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
+            <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;&nbsp;|&nbsp;
+            <a href="tel:+14122686723">412-268-6723</a>
           </div>
         </div>
       </div>
