--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
     <div id="container">
       <div id="header">
         <div id="header-titles">
-          <div class="create-lab-font">
+          <div class="logo">
             <a href="./">
               <div class="title-text">Explorables</div>
-              <div class="subtitle-text">CREATE Lab</div>
             </a>
           </div>
         </div>
-        <p id="site-description">
-          <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a> Explorables provide interactive, visual representations of large data sets that allow users to delve into the information and more fully grasp its meaning. Data in its raw form is often meaningless to the majority of people. This limits access to information that has the potential to empower communities and transform lives. We aim to make big data more accessible to the everyday citizen, as well as provide scientists with powerful tools for visualizing and communicating their research findings.
-        </p>
+        <table id="site-description">
+          <tr>
+            <td valign="top" class="what">
+              <h3>What is Explorables?</h3>
+              <p>
+                Explorables provide interactive and visual representations of large data sets, revealing patterns, encouraging discovery, and facilitating communication.
+              </p>
+            </td>
+            <td valign="top" class="who">
+              <h3>Who are we?</h3>
+              <p>
+                The Explorables Collaborative, including <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a> and <a href="http://skytruth.org/" target="_blank">SkyTruth</a>, is dedicated to helping you make your information more impactful. <a href="mailto:info@cmucreatelab.org">Contact us!</a>
+              </p>
+            </td>
+          </tr>
+        </table>
       </div>
       <div id="body-index">
         <table>
@@ -116,9 +128,10 @@
         </table>
       </div>
       <div id="footer">
-        <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
-        <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
-        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
+        <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
+        <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
+        <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
+        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;&nbsp;|&nbsp;
         <a href="tel:+14122686723">412-268-6723</a>
       </div>
     </div>
