--- a/explorables/speck-air-quality-test-explorable.html
+++ b/explorables/speck-air-quality-test-explorable.html
@@ -9,10 +9,9 @@
     <div id="container" style="width:1360px">
       <div id="header" style="width:1360px">
         <div id="header-titles">
-          <div class="create-lab-font">
-            <a href="../">
+          <div class="logo">
+            <a href="./">
               <div class="title-text">Explorables</div>
-              <div class="subtitle-text">CREATE Lab</div>
             </a>
           </div>
         </div>
@@ -21,9 +20,10 @@
         <iframe src="http://bartley.cmucreatelab.org/environmental-sensor-visualization/speck_12x12_strip_chart.html" width="1360" height="920" frameborder="0"></iframe>
       </div>
       <div id="footer">
-        <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
-        <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
-        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
+        <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
+        <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
+        <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
+        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;&nbsp;|&nbsp;
         <a href="tel:+14122686723">412-268-6723</a>
       </div>
     </div>
