Reverted the introduction text. Removed the telephone number.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             </a>
           </div>
         </div>
+        <p id="site-description-old">
+          <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a> Explorables provide interactive, visual representations of large data sets that allow users to delve into the information and more fully grasp its meaning. Data in its raw form is often meaningless to the majority of people. This limits access to information that has the potential to empower communities and transform lives. We aim to make big data more accessible to the everyday citizen, as well as provide scientists with powerful tools for visualizing and communicating their research findings.
+        </p>
         <table id="site-description">
           <tr>
             <td valign="top" class="what">
@@ -131,8 +134,7 @@
         <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
         <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
         <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
-        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;&nbsp;|&nbsp;
-        <a href="tel:+14122686723">412-268-6723</a>
+        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>
       </div>
     </div>
   </body>
