--- a/explorables/airnow.html
+++ b/explorables/airnow.html
@@ -40,8 +40,7 @@
         <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
         <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
         <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
-        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;&nbsp;|&nbsp;
-        <a href="tel:+14122686723">412-268-6723</a>
+        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>
       </div>
     </div>
   </body>
