--- a/explorables/fracking-earthquakes.html
+++ b/explorables/fracking-earthquakes.html
@@ -10,7 +10,7 @@
       <div id="header">
         <div id="header-titles">
           <div class="logo">
-            <a href="./">
+            <a href="../">
               <div class="title-text">Explorables</div>
             </a>
           </div>
