--- a/explorables/speck-air-quality-test-explorable.html
+++ b/explorables/speck-air-quality-test-explorable.html
@@ -10,7 +10,7 @@
       <div id="header" style="width:1360px">
         <div id="header-titles">
           <div class="logo">
-            <a href="./">
+            <a href="../">
               <div class="title-text">Explorables</div>
             </a>
           </div>
