--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -91,7 +91,7 @@
       <div id="header" style="position:fixed; top:0px; z-index:2; height: 65px;">
         <div id="header-titles">
           <div class="logo">
-            <a href="./">
+            <a href="../">
               <div class="title-text">Explorables</div>
             </a>
           </div>
