Tweaked UI. Added a hidden menu bar for future usage. Added a hidden about.html for future usage.

--- a/explorables/speck-in-home-explorable.html
+++ b/explorables/speck-in-home-explorable.html
@@ -14,14 +14,18 @@
               <div class="title-text">Explorables</div>
             </a>
           </div>
+          <div id="menu">
+             <a href="about.html">About</a>&nbsp;&nbsp;|&nbsp;
+             <a href="mailto:info@cmucreatelab.org">Contact</a>
+          </div>
         </div>
       </div>
       <div id="body" style="width:1120px;margin-top:0">
         <iframe src="http://bartley.cmucreatelab.org/environmental-sensor-visualization/speck_scs_in_home.html" width="1120" height="790" frameborder="0" scrolling="no"></iframe>
       </div>
       <div id="footer">
+        <hr class="line">
         <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
-        <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
         <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
         <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>
       </div>
