--- a/explorables/suburban-sprawl.html
+++ b/explorables/suburban-sprawl.html
@@ -14,6 +14,10 @@
               <div class="title-text">Explorables</div>
             </a>
           </div>
+          <div id="menu">
+             <a href="about.html">About</a>&nbsp;&nbsp;|&nbsp;
+             <a href="mailto:info@cmucreatelab.org">Contact</a>
+          </div>
         </div>
       </div>
       <div id="body">
@@ -28,8 +32,8 @@
         </div>
       </div>
       <div id="footer">
+        <hr class="line">
         <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
-        <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
         <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
         <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>
       </div>
