--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -95,11 +95,15 @@
               <div class="title-text">Explorables</div>
             </a>
           </div>
+          <div id="menu">
+             <a href="about.html">About</a>&nbsp;&nbsp;|&nbsp;
+             <a href="mailto:info@cmucreatelab.org">Contact</a>
+          </div>
         </div>
       </div>
       <div id="body" style="margin-top:5px;">
         <div id="embed-fixed" style="position:fixed;">
-          <iframe name="time_machine_iframe" id="time_machine_iframe" width="943" height="495" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/landsat.html#presentation=EKDkDXcLtihk7t1Q_Taiwan_DkDahRXiWQ7t5hBTyphoon%20Morakot%20on%20August%202009%20brought%20extreme%20amount%20of%20rain%20and%20caused%20river%20bank%20collapse%20on%20the%20mouth%20area%2E_Taimali%20River_DkDctb4iFdCu5hBA%20coal-fired%20power%20plant%20in%20a%20cement%20industrial%20park%20used%20to%20support%20the%20massive%20power%20needed%20for%20cement%20production%2E_Heping%20Power%20Plant_DkDa7PJjHK_t5hBTaipei%20Harbor%20is%20an%20artificial%20harbor%20built%20by%20land%20reclamation%20and%20mainly%20used%20for%20operations%20of%20large%20container%20ships%2E_Taipei%20Harbor_DkDUP_Gj937t5hBA%20gas-fired%20combined-cycle%20thermal%20power%20plant%2E%20It%20emits%20less%20carbon%20dioxide%20and%20thus%20is%20more%20environmental%20friendly%2E_Datan%20Power%20Plant_DkDYMp3igp2t5hB_Taichung%20Power%20Plant_DkDSeu0ifl1t5hB_Zhangbin%20Industrial_DkDZzyuijjzt5hB_Naphtha%20Cracking_DkDUZ1eiiOzt5hB_Anping%20Harbor_BAXtCWiQ80t5hB_Kaohsiung%20Harbor_Taiwan%20Coast%20Line_B" frameborder="0"></iframe>
+          <iframe name="time_machine_iframe" id="time_machine_iframe" width="960" height="495" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/landsat.html#presentation=EKDkDXcLtihk7t1Q_Taiwan_DkDahRXiWQ7t5hBTyphoon%20Morakot%20on%20August%202009%20brought%20extreme%20amount%20of%20rain%20and%20caused%20river%20bank%20collapse%20on%20the%20mouth%20area%2E_Taimali%20River_DkDctb4iFdCu5hBA%20coal-fired%20power%20plant%20in%20a%20cement%20industrial%20park%20used%20to%20support%20the%20massive%20power%20needed%20for%20cement%20production%2E_Heping%20Power%20Plant_DkDa7PJjHK_t5hBTaipei%20Harbor%20is%20an%20artificial%20harbor%20built%20by%20land%20reclamation%20and%20mainly%20used%20for%20operations%20of%20large%20container%20ships%2E_Taipei%20Harbor_DkDUP_Gj937t5hBA%20gas-fired%20combined-cycle%20thermal%20power%20plant%2E%20It%20emits%20less%20carbon%20dioxide%20and%20thus%20is%20more%20environmental%20friendly%2E_Datan%20Power%20Plant_DkDYMp3igp2t5hB_Taichung%20Power%20Plant_DkDSeu0ifl1t5hB_Zhangbin%20Industrial_DkDZzyuijjzt5hB_Naphtha%20Cracking_DkDUZ1eiiOzt5hB_Anping%20Harbor_BAXtCWiQ80t5hB_Kaohsiung%20Harbor_Taiwan%20Coast%20Line_B" frameborder="0"></iframe>
         </div>
         <div id="embed-description-scroll">
           <h2>Landscape Changes Along Taiwan's Coastline in Two Decades</h2>
@@ -122,16 +126,18 @@
                 <p>
                   Traditional Chinese Translation:<br>
                   台灣的海岸線因為都市化與自然災害，在近二十年內產生了重大的改變。
-                  左圖中標註了九個可以由衛星影像清楚地看到地貌改變的地點。
-                  其中涵蓋了三座重要的發電廠、三個港口的興建與擴建、兩個新規劃的工業園區、與一條河流的出海口。
-                  這些變化顯示海島國家在工業化過程中對土地的需求和自然災害對面向太平洋的東岸居民的影響。
+                                              左圖中標註了九個可以由衛星影像清楚地看到地貌改變的地點。
+                                              其中涵蓋了三座重要的發電廠、三個港口的興建與擴建、兩個新規劃的工業園區、與一條河流的出海口。
+                                              這些變化顯示海島國家在工業化過程中對土地的需求和自然災害對面向太平洋的東岸居民的影響。
                 </p>
               </td>
             </tr>
           </table>
           <h2>Change 1: Taimali River, Taitung</h2>
           <div>
-            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taimali_.gif" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taimali1.jpg" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taimali2.jpg" />
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taimali_.gif" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taimali1.jpg" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taimali2.jpg" />
           </div>
           <p>
             On August 2009, the landscape of Taimali River mouth is changed by Typhoon Morakot coming from the Pacific Ocean with 90 mph (150 km/h) peaking wind and 109.3 inch (2777 mm) peaking rainfall.
@@ -141,7 +147,9 @@
           </p>
           <h2>Change 2: Heping Power Plant, Hualien</h2>
           <div>
-            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Heping_.gif" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Heping1.jpg" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Heping2.jpg" />
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Heping_.gif" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Heping1.jpg" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Heping2.jpg" />
           </div>
           <p>
             Heping Power Plant constructed from 1999 to 2002 is a coal-fired power plant located in a cement industrial park near processing factories and a specifically designed shipping harbor.
@@ -153,7 +161,9 @@
           </p>
           <h2>Change 3: Taipei Harbor, Taipei</h2>
           <div>
-            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taipei_.gif" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taipei1.jpg" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taipei2.jpg" />
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taipei_.gif" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taipei1.jpg" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Taipei2.jpg" />
           </div>
           <p>
             Taipei Harbor is an artificial harbor built by land reclamation near Taiwan’s capital city, Taipei.
@@ -164,7 +174,9 @@
           </p>
           <h2>Change 4: Datan Power Plant, Taoyuan</h2>
           <div>
-            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Datan_.gif" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Datan1.jpg" />&nbsp; <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Datan2.jpg" />
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Datan_.gif" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Datan1.jpg" />&nbsp;&nbsp;&nbsp;
+            <img border="0" class="imgSmall" src="../img/timelapse-story-telling/Datan2.jpg" />
           </div>
           <p>
             Datan Power Plant is a gas-fired combined-cycle thermal power plant located in Taoyuan.
@@ -175,8 +187,8 @@
             The right two images above are retrieved from <a href="http://en.wikipedia.org/wiki/Tatan_Power_Plant">Wikipedia</a> and <a href="http://www.taipower.com.tw/e_content/index.aspx">Taiwan Power Company’s website</a>.
           </p>
           <div id="footer">
+            <hr class="line">
             <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a>&nbsp;&nbsp;|&nbsp;
-            <a href="http://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a>&nbsp;&nbsp;|&nbsp;
             <a href="http://www.cmu.edu" target="_blank">Carnegie Mellon University</a>&nbsp;&nbsp;|&nbsp;
             <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>
           </div>
