--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/firms-lance-modis@2x.png">
                   <div class="thumbnail-title">FIRMS Timelapse</div>
-                  <div class="thumbnail-description">Visualization of thirteen years of MODIS fire location vector data overlayed on explorable global timelapse.</div>
+                  <div class="thumbnail-description">Visualization of thirteen years of MODIS fire location vector data overlayed on an explorable global timelapse.</div>
                 </div>
               </a>
             </td>
@@ -57,7 +57,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/suburban-sprawl@2x.png">
                   <div class="thumbnail-title">Suburban Sprawl</div>
-                  <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using Timemachine to show the full scope of changes.</div>
+                  <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using TimeMachine to show the full scope of changes.</div>
                 </div>
               </a>
             </td>
@@ -87,7 +87,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/earthquakes@2x.png">
                   <div class="thumbnail-title">Fracking Earthquakes</div>
-                  <div class="thumbnail-description">Visualization of LANDSAT timemachine exploring the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
+                  <div class="thumbnail-description">Visualization of USGS earthquake data overlayed on LANDSAT satellite data using TimeMachine to explore the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
                 </div>
               </a>
             </td>
@@ -105,7 +105,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/yenchia@2x.png">
                   <div class="thumbnail-title">Timelapse Story Telling</div>
-                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Time Machine.</div>
+                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using TimeMachine.</div>
                 </div>
               </a>
             </td>
