--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/earthquakes@2x.png">
                   <div class="thumbnail-title">Fracking Earthquakes</div>
-                  <div class="thumbnail-description">Visualization of USGS data overlayed on Landsat imagery using TimeMachine to explore the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
+                  <div class="thumbnail-description">Visualization of Landsat and USGS data, utilizing TimeMachine to explore the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
                 </div>
               </a>
             </td>
