Default view of the explorable now has Canada, US, and France toggled on.

--- a/explorables/explorable-inequality.html
+++ b/explorables/explorable-inequality.html
@@ -37,7 +37,7 @@
             compared to the rest of society in each country.
           </p>
           <ul>
-            <li><a href="world-top-incomes-database/" target="_blank">Open the visualization to explore for yourself</a></li>
+            <li><a href="world-top-incomes-database/#VG9wIDElIGluY29tZSBzaGFyZXxDYW5hZGF8VW5pdGVkIFN0YXRlc3xGcmFuY2U=" target="_blank">Open the visualization to explore for yourself</a></li>
           </ul>
         </div>
       </div>
