--- a/explorables/explorable-inequality.html
+++ b/explorables/explorable-inequality.html
@@ -31,10 +31,10 @@
             hundred years. This data is openly available as
             <a href="http://topincomes.g-mond.parisschoolofeconomics.eu/" target="_blank">The World Top Incomes Database</a>.
           </p>
-          <p>To create a sharable,
+          <p>For a sharable,
             interactive visualization of global inequality, we created this explorable viewer
             for the WTID. See how the income of the wealthiest classes have evolved, and how much greater wealth the top 1% have
-            compared to the rest of society in each country.
+            compared to the rest of society in each country.  This video gives a brief introduction to the data and how to use the explorable.  Use the link below to explore it yourself.
           </p>
           <ul>
             <li><a href="world-top-incomes-database/#VG9wIDElIGluY29tZSBzaGFyZXxDYW5hZGF8VW5pdGVkIFN0YXRlc3xGcmFuY2U=" target="_blank">Open the visualization to explore for yourself</a></li>
