Added Explorable Inequality to the home page.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         <table>
           <tr>
             <td class="thumbnail">
+              <a href="explorables/explorable-inequality.html">
+                <div>
+                  <img class="thumbnail-image" src="img/explorable-inequality@2x.png">
+                  <div class="thumbnail-title">Explorable Inequality</div>
+                  <div class="thumbnail-description">Explorable visualization of the World Top Incomes Database illustrating global income inequality.
+                  </div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
               <a href="explorables/speck-air-quality-test.html">
                 <div>
                   <img class="thumbnail-image" src="img/speck12x12@2x.png">
@@ -61,6 +71,8 @@
                 </div>
               </a>
             </td>
+          </tr>
+          <tr>
             <td class="thumbnail">
               <a href="explorables/airnow.html">
                 <div>
@@ -70,8 +82,6 @@
                 </div>
               </a>
             </td>
-          </tr>
-          <tr>
             <td class="thumbnail">
               <a href="http://gabrielo.cmucreatelab.org/drilling-data-tools/visualize/google-maps.html" target="_blank">
                 <div>
@@ -100,6 +110,8 @@
                 </div>
               </a>
             </td>
+          </tr>
+          <tr>
             <td class="thumbnail">
               <a href="explorables/timelapse-story-telling.html">
                 <div>
@@ -109,8 +121,6 @@
                 </div>
               </a>
             </td>
-          </tr>
-          <tr>
             <td class="thumbnail">
               <a href="explorables/speck-in-home.html">
                 <div>
@@ -121,7 +131,6 @@
                 </div>
               </a>
             </td>
-            <td></td>
             <td></td>
             <td></td>
           </tr>
