Fixed text size.

--- a/explorables/explorable-inequality.html
+++ b/explorables/explorable-inequality.html
@@ -31,8 +31,9 @@
             hundred years. This data is openly available as
             <a href="http://topincomes.g-mond.parisschoolofeconomics.eu/" target="_blank">The World Top Incomes Database</a>.
           </p>
-          <p>For a sharable,
-            interactive visualization of global inequality, we created this explorable viewer
+          <p class="content-text">
+            For a sharable,
+            interactive visualization of global inequality, we present this explorable viewer
             for the WTID. See how the income of the wealthiest classes have evolved, and how much greater wealth the top 1% have
             compared to the rest of society in each country.  This video gives a brief introduction to the data and how to use the explorable.  Use the link below to explore it yourself.
           </p>
