--- a/explorables/explorable-inequality.html
+++ b/explorables/explorable-inequality.html
@@ -1,8 +1,343 @@
 <!doctype html>
 <html>
   <head>
+
+<style>
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/MTP_ySUJH_bn48VBG8sNSnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/EInbV5DfGHOiMmvb1Xr-hnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: white;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+@font-face {
+  font-family: 'klavika';
+  src: url('../css/fonts/Klavika-Light.eot');
+  src: url('../css/fonts/Klavika-Light.eot?#iefix') format('embedded-opentype'),
+       url('../css/fonts/Klavika-Light.otf') format('opentype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'klavika';
+  src: url('../css/fonts/Klavika-Medium.eot');
+  src: url('../css/fonts/Klavika-Medium.eot?#iefix') format('embedded-opentype'),
+       url('../css/fonts/Klavika-Medium.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+.logo {
+  font-family: klavika, Helvetica, Arial, sans-serif !important;
+  padding-top: 6px;
+  width: 310px;
+  height: 30px;
+}
+
+.title-text {
+  float: left;
+  font-size: 23pt;
+  color: rgb(80,80,80);
+  margin-right: 10px;
+}
+
+.subtitle-text {
+  font-size: 21pt;
+  font-weight: 100;
+  margin-top: 1px;
+  color: #494949;
+}
+
+.content-text {
+  text-align: left;
+  font-size: 10pt;
+}
+
+#container {
+  height: 100%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  width: 960px;
+  text-align: center;
+}
+
+#header {
+  text-align: center;
+  width: 960px;
+  background-color: white;
+}
+
+#header-titles {
+  text-align: left;
+}
+
+#menu {
+  margin-top: -25px;
+  float: right;
+  font-size: 13pt;
+  display: none;
+}
+
+#menu a {
+  color: rgb(80,80,80);
+  font-family: klavika, Helvetica, Arial, sans-serif;
+}
+
+#menu a:hover {
+  color: rgb(0,0,0);
+}
+
+.site-description {
+  font-size: 16px;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 826px;
+}
+
+.about-description {
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  width: 826px;
+}
+
+.about-description p {
+  font-size: 16px;
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+
+.about-description h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+  margin-bottom: 5px;
+  color: rgb(80,80,80);
+}
+
+#cmu-logo-detail-page {
+  position: relative;
+  width: 200px;
+  height: 30px;
+  margin-top: 10px;
+  background-image: url('../img/CM_logo_horiz_red.png');
+  background-size: 200px 30px;
+}
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  #cmu-logo-detail-page {
+    background-image: url('../img/CM_logo_horiz_red@2x.png');
+    background-size: 200px 30px;
+  }
+}
+
+#body {
+  overflow: hidden;
+  width: 960px;
+  margin: 30px auto 0;
+}
+
+#body-index {
+  overflow: hidden;
+  width: 1100px;
+  margin-top: 15px;
+  margin-left: -17px;
+}
+
+.thumbnail a {
+  width: 244px;
+  float: left;
+  height: 316px;
+  border-radius: 4px;
+  color: black;
+  border: 1px solid rgba(0,0,0,0);
+}
+
+.thumbnail a:hover {
+  border: 1px solid rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+}
+
+.thumbnail-image {
+  border-radius: 2px;
+  width: 217px;
+  margin-top: 15px;
+}
+
+.thumbnail-title {
+  text-align: left;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 15px;
+  font-weight: 700;
+  width: 217px;
+  color: rgb(60,60,60);
+}
+
+.thumbnail-description {
+  text-align: left;
+  margin-top: 2px;
+  margin-left: 15px;
+  font-size: 13px;
+  width: 221px;
+  padding: 0px;
+  word-spacing: 0px;
+  letter-spacing: 0px;
+  line-height: 18px;
+}
+
+.line {
+  border-top: 1px solid #dfdfdf;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+}
+
+#footer {
+  width: 100%;
+  text-align: center;
+  height: 50px;
+  margin-top: 15px;
+  font-family: klavika, Helvetica, Arial, sans-serif !important;
+}
+
+#footer a {
+  color: rgb(80,80,80);
+}
+
+#footer a:hover {
+  color: rgb(0,0,0);
+}
+
+#embed {
+  float: left;
+  width: 520px;
+  margin-right: 20px;
+  margin-left: 2px;
+}
+
+#embed-description {
+  float: right;
+  width: 290px;
+  text-align: left;
+}
+
+#embed-description ul {
+  list-style: none;
+  padding: 0;
+}
+
+#embed-description ul a{
+  font-size: 11pt;
+}
+
+#embed-description h3 {
+  margin-top: 0;
+  color: rgb(60,60,60);
+}
+
+#embed-fixed {
+  z-index: 2;
+  top: 45px;
+  width: 960px;
+  height: 492px;
+  margin-left: 2px;
+  background: white;
+  -moz-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
+  box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
+  border-bottom: 1px #ddd;
+}
+
+#embed-description-scroll {
+  z-index: 1;
+  position: absolute;
+  top: 530px;
+  width: 960px;
+  margin-left: 3px;
+  text-align: left;
+}
+
+#embed-description-scroll p {
+  font-size: 12pt;
+  line-height: 19px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  word-spacing: 0px;
+  letter-spacing: 0px;
+}
+
+#embed-description-scroll h2 {
+  margin-top: 20px;
+  line-height: 25px;
+  margin-bottom: 0px;
+  font-size: 16pt;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#embed-description-scroll .imgLeft {
+  border-radius: 3px;
+  margin-right: 20px;
+  margin-top: 22px;
+  margin-bottom: -2px;
+  width: 308px;
+}
+
+#embed-description-scroll .imgSmall {
+  border-radius: 3px;
+  margin-right: 0px;
+  margin-top: 20px;
+  width: 308px;
+}
+
+#embed-description-scroll table {
+  border-spacing: 0px;
+}
+</style>
+
     <title>Explorable Inequality: World Top Income Database</title>
-    <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="../js/googleAnalytics.js" type="text/javascript"></script>
   </head>
   <body>
@@ -22,7 +357,7 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/video/93665103" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="http://player.vimeo.com/video/93665103" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
         <div id="embed-description">
           <h3>Explorable Inequality: World Top Income Database</h3>
