Updated the text on the index page. Changed the text for links to visualizations for consistency.

--- a/explorables/eva-and-lehd.html
+++ b/explorables/eva-and-lehd.html
@@ -30,7 +30,7 @@
               This tool is focused around visualizing massive and high dimensional datasets. As an example, a sample of workforce census data has been preloaded in the system. The user can assign various dimensions of data to 5 available spatio-temporal visual dimensions and then interact with the data. The goal is to provide a tool suitable for visualizing and understanding large datasets. These stories demonstrate using EVA to explore and visualize the data from LEHD.
             </p>
           <ul>
-            <li><a href="http://eva.cmucreatelab.org" target="_blank">Explore it yourself</a></li>
+            <li><a href="http://eva.cmucreatelab.org" target="_blank">Open the visualization to explore for yourself</a></li>
           </ul>
         </div>
       </div>
