--- a/explorables/fracking-earthquakes.html
+++ b/explorables/fracking-earthquakes.html
@@ -30,7 +30,7 @@
             This visualization explores the link between natural gas extraction and the Guy-Greenbrier earthquake swarm. The Landsat timelapse footage, overlayed with USGS earthquake data, covers the time period between 1984-2012 and shows how the number of wells in the region increases greatly, while also capturing the onset of the earthquakes in 2010.
           </p>
           <ul>
-            <li><a href="http://g7.gigapan.org/pdille/fracking-earthquakes3-2-alpha/view.html" target="_blank">Explore it yourself</a></li>
+            <li><a href="http://g7.gigapan.org/pdille/fracking-earthquakes3-2-alpha/view.html" target="_blank">Open the visualization to explore for yourself</a></li>
           </ul>
         </div>
       </div>
