--- a/explorables/suburban-sprawl.html
+++ b/explorables/suburban-sprawl.html
@@ -29,6 +29,9 @@
           <p class="content-text">
             This video depicts the effect of suburban sprawl near my home in Chesterfield County, Virginia.  Though I did not notice the speed at which the development occurred while I lived there, when I left for college I began to realize every time I returned for the holidays that my hometown was never the same as how I left it.
           </p>
+          <ul>
+            <li><a href="https://earthengine.google.org/#timelapse/v=37.43219,-77.61558,10.812,latLng&t=1.03" target="_blank">Open the visualization to explore for yourself</a></li>
+          </ul>
         </div>
       </div>
       <div id="footer">
