Changes so the page works via both http and https

--- a/explorables/speck-air-quality-test-explorable.html
+++ b/explorables/speck-air-quality-test-explorable.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div id="body" style="width:1360px;margin-top:0">
-        <iframe src="http://bartley.cmucreatelab.org/environmental-sensor-visualization/speck_12x12_strip_chart.html" width="1360" height="920" frameborder="0"></iframe>
+        <iframe src="//bartley.cmucreatelab.org/environmental-sensor-visualization/speck_12x12_strip_chart.html" width="1360" height="920" frameborder="0"></iframe>
       </div>
       <div id="footer">
         <hr class="line">
