--- a/explorables/speck-in-home-explorable.html
+++ b/explorables/speck-in-home-explorable.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div id="body" style="width:1120px;margin-top:0">
-        <iframe src="http://bartley.cmucreatelab.org/environmental-sensor-visualization/speck_scs_in_home.html" width="1120" height="790" frameborder="0" scrolling="no"></iframe>
+        <iframe src="//bartley.cmucreatelab.org/environmental-sensor-visualization/speck_scs_in_home.html" width="1120" height="790" frameborder="0" scrolling="no"></iframe>
       </div>
       <div id="footer">
         <hr class="line">
