--- a/explorables/airnow-explorable.html
+++ b/explorables/airnow-explorable.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div id="body" style="width:1360px;margin-top:0">
-        <iframe src="http://bartley.cmucreatelab.org/environmental-sensor-visualization/airnow_visualization_canvas.html" width="1360" height="800" frameborder="0"></iframe>
+        <iframe src="//bartley.cmucreatelab.org/environmental-sensor-visualization/airnow_visualization_canvas.html" width="1360" height="800" frameborder="0"></iframe>
       </div>
       <div id="footer">
         <hr class="line">
