Updated link to drilling explorable

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="http://gabrielo.cmucreatelab.org/drilling-data-tools/visualize/google-maps.html" target="_blank">
+              <a href="http://explorables.cmucreatelab.org/drilling-data-tools/visualize/google-maps.html" target="_blank">
                 <div>
                   <img class="thumbnail-image" src="img/drilling@2x.png">
                   <div class="thumbnail-title">Drilling</div>
