--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         <table>
           <tr>
             <td class="thumbnail">
+              <a href="http://explorables.cmucreatelab.org/data-visualization-tools/examples/createlab-viirs/google-maps.html">
+                <div>
+                  <img class="thumbnail-image" src="img/viirs@2x.png">
+                  <div class="thumbnail-title">Fires at night</div>
+                  <div class="thumbnail-description">Explorable visualization of a wide variety of fires detected by VIIRS over a year.
+                  </div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
               <a href="explorables/explorable-inequality.html">
                 <div>
                   <img class="thumbnail-image" src="img/explorable-inequality@2x.png">
@@ -56,6 +66,8 @@
                 </div>
               </a>
             </td>
+          </tr>
+          <tr>
             <td class="thumbnail">
               <a href="explorables/suburban-sprawl.html">
                 <div>
@@ -65,8 +77,6 @@
                 </div>
               </a>
             </td>
-          </tr>
-          <tr>
             <td class="thumbnail">
               <a href="explorables/airnow.html">
                 <div>
@@ -95,6 +105,8 @@
                 </div>
               </a>
             </td>
+          </tr>
+          <tr>
             <td class="thumbnail">
               <a href="explorables/eva-and-lehd.html">
                 <div>
@@ -104,8 +116,6 @@
                 </div>
               </a>
             </td>
-          </tr>
-          <tr>
             <td class="thumbnail">
               <a href="explorables/timelapse-story-telling.html">
                 <div>
