--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -11,16 +11,16 @@
       var lastScrollTop = 0;
       var enableIframeRequest = true;
       var p1 = {
-        "Taimali_River": 230,
-        "Heping_Power_Plant": 596,
-        "Taipei_Harbor": 958,
-        "Datan_Power_Plant": 1318
+        "Taimali_River": 270,
+        "Heping_Power_Plant": 636,
+        "Taipei_Harbor": 998,
+        "Datan_Power_Plant": 1358
       };
       var p2 = {
-        "Taiwan": 25,
-        "Taimali_River": 345,
-        "Heping_Power_Plant": 691,
-        "Taipei_Harbor": 1053
+        "Taiwan": 65,
+        "Taimali_River": 385,
+        "Heping_Power_Plant": 731,
+        "Taipei_Harbor": 1093
       };
       var pScrollTo = {
         "Taiwan": 0,
@@ -35,8 +35,8 @@
           target: document.getElementById("time_machine_iframe").contentWindow,
           type: type,
           data: data,
-          url: "http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/landsat.html",
-          origin: "http://yenchiah.cmucreatelab.org"
+          url: "http://timemachine.cmucreatelab.org/viewer/20150622/public/landsat_editor_wiki.html",
+          origin: "http://timemachine.cmucreatelab.org"
         });
       }
 
@@ -103,7 +103,7 @@
       </div>
       <div id="body" style="margin-top:5px;">
         <div id="embed-fixed" style="position:fixed;">
-          <iframe name="time_machine_iframe" id="time_machine_iframe" width="960" height="495" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/landsat.html#presentation=EKDkDXcLtihk7t1Q_Taiwan_DkDahRXiWQ7t5hBTyphoon%20Morakot%20on%20August%202009%20brought%20extreme%20amount%20of%20rain%20and%20caused%20river%20bank%20collapse%20on%20the%20mouth%20area%2E_Taimali%20River_DkDctb4iFdCu5hBA%20coal-fired%20power%20plant%20in%20a%20cement%20industrial%20park%20used%20to%20support%20the%20massive%20power%20needed%20for%20cement%20production%2E_Heping%20Power%20Plant_DkDa7PJjHK_t5hBTaipei%20Harbor%20is%20an%20artificial%20harbor%20built%20by%20land%20reclamation%20and%20mainly%20used%20for%20operations%20of%20large%20container%20ships%2E_Taipei%20Harbor_DkDUP_Gj937t5hBA%20gas-fired%20combined-cycle%20thermal%20power%20plant%2E%20It%20emits%20less%20carbon%20dioxide%20and%20thus%20is%20more%20environmental%20friendly%2E_Datan%20Power%20Plant_DkDYMp3igp2t5hB_Taichung%20Power%20Plant_DkDSeu0ifl1t5hB_Zhangbin%20Industrial_DkDZzyuijjzt5hB_Naphtha%20Cracking_DkDUZ1eiiOzt5hB_Anping%20Harbor_BAXtCWiQ80t5hB_Kaohsiung%20Harbor_Taiwan%20Coast%20Line_B" frameborder="0"></iframe>
+          <iframe name="time_machine_iframe" id="time_machine_iframe" width="960" height="515" src="http://timemachine.cmucreatelab.org/viewer/20150622/public/landsat_editor_wiki.html#presentation=EKDkDXcLtihk7t1Q_Taiwan_DkDahRXiWQ7t5hBTyphoon%20Morakot%20on%20August%202009%20brought%20extreme%20amount%20of%20rain%20and%20caused%20river%20bank%20collapse%20on%20the%20mouth%20area%2E_Taimali%20River_DkDctb4iFdCu5hBA%20coal-fired%20power%20plant%20in%20a%20cement%20industrial%20park%20used%20to%20support%20the%20massive%20power%20needed%20for%20cement%20production%2E_Heping%20Power%20Plant_DkDa7PJjHK_t5hBTaipei%20Harbor%20is%20an%20artificial%20harbor%20built%20by%20land%20reclamation%20and%20mainly%20used%20for%20operations%20of%20large%20container%20ships%2E_Taipei%20Harbor_DkDUP_Gj937t5hBA%20gas-fired%20combined-cycle%20thermal%20power%20plant%2E%20It%20emits%20less%20carbon%20dioxide%20and%20thus%20is%20more%20environmental%20friendly%2E_Datan%20Power%20Plant_DkDYMp3igp2t5hB_Taichung%20Power%20Plant_DkDSeu0ifl1t5hB_Zhangbin%20Industrial_DkDZzyuijjzt5hB_Naphtha%20Cracking_DkDUZ1eiiOzt5hB_Anping%20Harbor_BAXtCWiQ80t5hB_Kaohsiung%20Harbor_Taiwan%20Coast%20Line_B" frameborder="0"></iframe>
         </div>
         <div id="embed-description-scroll">
           <h2>Landscape Changes Along Taiwan's Coastline in Two Decades</h2>
