--- a/explorables/smoke-detection.html
+++ b/explorables/smoke-detection.html
@@ -4,18 +4,25 @@
     <title>Smoke Detection</title>
     <style type="text/css">
       body, html {
-        margin: 0; padding: 0; height: 100%; overflow: hidden;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
       }
       #content {
         position: absolute;
-        left: 10px;
-        top: 10px;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: auto;
+        height: auto;
       }
     </style>
   </head>
   <body>
     <div id="content">
-      <iframe width="900" height="500" frameborder="0" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/smoke_detection.html#v=2818.82163,1433.55269,1.325,pts&t=619.86&d=2015-05-02&s=shenango1" />
+      <iframe width="100%" height="100%" frameborder="0" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/smoke_detection.html#v=2818.82163,1433.55269,1.325,pts&t=619.86&d=2015-05-02&s=shenango1" />
     </div>
   </body>
 </html>
